mi-primer-proyecto/force-app/main/default/objects/vita_paciente__c/vita_paciente__c.object-meta.xml
<CustomObject>
    <description>Información clínica, administrativa y de contacto del paciente. Se vincula a Vita_Usuario.</description>
    <label>Paciente</label>
    <nameField>
        <displayFormat>PAC-{0000}</displayFormat>
        <label>Paciente Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pacientes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>