mi-primer-proyecto/force-app/main/default/objects/vita_paciente__c/fields/alergias__c.field-meta.xml
<CustomField>
    <fullName>alergias__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>La persona presenta alergias.</inlineHelpText>
    <label>Alergias</label>
    <type>Checkbox</type>
</CustomField>