mi-primer-proyecto/force-app/main/default/objects/vita_paciente__c/fields/alergias_paciente__c.field-meta.xml
<CustomField>
    <fullName>alergias_paciente__c</fullName>
    <inlineHelpText>Ingrese las alergias del paciente.</inlineHelpText>
    <label>Alergias Paciente</label>
    <type>TextArea</type>
</CustomField>