mi-primer-proyecto/force-app/main/default/objects/vita_paciente__c/fields/Descuento_por_Cobertura__c.field-meta.xml
<CustomField>
    <fullName>Descuento_por_Cobertura__c</fullName>
    <formula>LR_tipo_de_cobertura__r.Porcentaje_Descuento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descuento por Cobertura</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>