mi-primer-proyecto/force-app/main/default/objects/vita_paciente__c/fields/estado_clinico__c.field-meta.xml
<CustomField>
    <fullName>estado_clinico__c</fullName>
    <description>Clasificación médica del estado actual del paciente. Útil para priorizar atención, activar alertas y generar reportes clínicos.</description>
    <inlineHelpText>Seleccioná el estado clínico actual del paciente. Este campo impacta en la lógica de turnos, layouts y seguimiento.</inlineHelpText>
    <label>Estado Clínico</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estable</fullName>
                <default>true</default>
                <label>Estable</label>
            </value>
            <value>
                <fullName>En tratamiento</fullName>
            </value>
            <value>
                <fullName>Crónico</fullName>
            </value>
            <value>
                <fullName>Recuperado</fullName>
            </value>
            <value>
                <fullName>Derivado</fullName>
            </value>
            <value>
                <fullName>Pendiente de evaluación</fullName>
            </value>
            <value>
                <fullName>Internado</fullName>
            </value>
            <value>
                <fullName>Requiere seguimiento</fullName>
            </value>
            <value>
                <fullName>Fallecido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>