mi-primer-proyecto/force-app/main/default/objects/vita_paciente__c/fields/LR_tipo_de_cobertura__c.field-meta.xml
<CustomField>
    <fullName>LR_tipo_de_cobertura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo de Cobertura</label>
    <referenceTo>tipo_de_cobertura__c</referenceTo>
    <relationshipLabel>Tipo de Cobertura</relationshipLabel>
    <relationshipName>Pacientes1</relationshipName>
    <type>Lookup</type>
</CustomField>