mi-primer-proyecto/force-app/main/default/objects/vita_paciente__c/fields/Nombre_de_Cobertura__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Cobertura__c</fullName>
    <formula>UPPER(TEXT(LR_tipo_de_cobertura__r.nombre_de_la_entidad__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de Cobertura</label>
    <type>Text</type>
</CustomField>