mi-primer-proyecto/force-app/main/default/objects/vita_paciente__c/fields/PAC_Apellido__c.field-meta.xml
<CustomField>
    <fullName>PAC_Apellido__c</fullName>
    <formula>usuario_id__r.apellido__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apellido</label>
    <type>Text</type>
</CustomField>