mi-primer-proyecto/force-app/main/default/objects/vita_paciente__c/fields/PAC_Nombre__c.field-meta.xml
<CustomField>
    <fullName>PAC_Nombre__c</fullName>
    <formula>usuario_id__r.nombre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre</label>
    <type>Text</type>
</CustomField>