mi-primer-proyecto/force-app/main/default/objects/vita_paciente__c/fields/patologias__c.field-meta.xml
<CustomField>
    <fullName>patologias__c</fullName>
    <description>Listado de patologías médicas relevantes del paciente. Permite seleccionar múltiples condiciones para seguimiento clínico, reportes y lógica de riesgo.</description>
    <inlineHelpText>Seleccioná todas las patologías que aplican al paciente. Este campo impacta en el cálculo de riesgo clínico y en la priorización de atención.</inlineHelpText>
    <label>Patologías</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hipertensión</fullName>
            </value>
            <value>
                <fullName>Insuficiencia cardíaca</fullName>
            </value>
            <value>
                <fullName>Arritmias</fullName>
            </value>
            <value>
                <fullName>Diabetes tipo 1</fullName>
            </value>
            <value>
                <fullName>Diabetes tipo 2</fullName>
            </value>
            <value>
                <fullName>Hipotiroidismo</fullName>
            </value>
            <value>
                <fullName>Hipertiroidismo</fullName>
            </value>
            <value>
                <fullName>Asma</fullName>
            </value>
            <value>
                <fullName>EPOC</fullName>
            </value>
            <value>
                <fullName>Bronquitis crónica</fullName>
            </value>
            <value>
                <fullName>Epilepsia</fullName>
            </value>
            <value>
                <fullName>Parkinson</fullName>
            </value>
            <value>
                <fullName>Migraña</fullName>
            </value>
            <value>
                <fullName>Depresión</fullName>
            </value>
            <value>
                <fullName>Ansiedad</fullName>
            </value>
            <value>
                <fullName>Trastorno bipolar</fullName>
            </value>
            <value>
                <fullName>Gastritis</fullName>
            </value>
            <value>
                <fullName>Reflujo</fullName>
            </value>
            <value>
                <fullName>Enfermedad celíaca</fullName>
            </value>
            <value>
                <fullName>Lupus</fullName>
            </value>
            <value>
                <fullName>Artritis reumatoide</fullName>
            </value>
            <value>
                <fullName>Psoriasis</fullName>
            </value>
            <value>
                <fullName>Cáncer de mama</fullName>
            </value>
            <value>
                <fullName>Cáncer de próstata</fullName>
            </value>
            <value>
                <fullName>Cáncer de colon</fullName>
            </value>
            <value>
                <fullName>VIH</fullName>
            </value>
            <value>
                <fullName>Hepatitis B</fullName>
            </value>
            <value>
                <fullName>Hepatitis C</fullName>
            </value>
            <value>
                <fullName>Tuberculosis</fullName>
            </value>
            <value>
                <fullName>Osteoporosis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>