mi-primer-proyecto/force-app/main/default/objects/vita_paciente__c/fields/patologias_paciente__c.field-meta.xml
<CustomField>
    <fullName>patologias_paciente__c</fullName>
    <inlineHelpText>Describa las patologías del paciente.</inlineHelpText>
    <label>Patologías Paciente</label>
    <type>TextArea</type>
</CustomField>