mi-primer-proyecto/force-app/main/default/objects/vita_paciente__c/fields/riesgo_clinico__c.field-meta.xml
<CustomField>
    <fullName>riesgo_clinico__c</fullName>
    <description>Clasificación del nivel de riesgo clínico del paciente según antecedentes, estado actual y criterios médicos. Este campo permite priorizar atención, activar alertas y segmentar reportes.</description>
    <inlineHelpText>Seleccioná el nivel de riesgo clínico del paciente. Este dato puede impactar en la asignación de turnos, derivaciones y seguimiento médico.</inlineHelpText>
    <label>Riesgo Clínico</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bajo</fullName>
            </value>
            <value>
                <fullName>Moderado</fullName>
            </value>
            <value>
                <fullName>Alto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>