mi-primer-proyecto/force-app/main/default/objects/vita_paciente__c/fields/tiene_discapacidad__c.field-meta.xml
<CustomField>
    <fullName>tiene_discapacidad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el paciente posee alguna discapacidad reconocida. Si está marcado, se activan campos adicionales como tipo de discapacidad, asistencia requerida y observaciones de accesibilidad.</description>
    <inlineHelpText>Marcá esta opción si el paciente tiene una discapacidad registrada. Esto permite adaptar la atención y activar campos específicos.</inlineHelpText>
    <label>Tiene Discapacidad</label>
    <type>Checkbox</type>
</CustomField>