mi-primer-proyecto/force-app/main/default/objects/vita_paciente__c/fields/U_PAC_DNI__c.field-meta.xml
<CustomField>
    <fullName>U_PAC_DNI__c</fullName>
    <formula>usuario_id__r.usuario_dni__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNI</label>
    <type>Text</type>
</CustomField>