mi-primer-proyecto/force-app/main/default/objects/vita_paciente__c/fields/usuario_id__c.field-meta.xml
<CustomField>
    <fullName>usuario_id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relación con el objeto Vita_Usuario</description>
    <label>Usuario Vinculado</label>
    <referenceTo>vita_usuario__c</referenceTo>
    <relationshipLabel>Pacientes</relationshipLabel>
    <relationshipName>Pacientes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>